@@ -115,6 +115,7 @@ lib/gl/
 lib/gstr.lo
 lib/gstr.o
 lib/.libs/
+lib/includes/libtasn1.h
 lib/libtasn1.la
 lib/libtasn1.pc
 lib/Makefile
