@@ -1,6 +1,8 @@
 GNU Libtasn1 NEWS                                     -*- outline -*-
 
 * Noteworthy changes in release 4.14 (unreleased) [stable]
+- New #defines for version checking: ASN1_VERSION_MAJOR, ASN1_VERSION_MINOR,
+  ASN1_VERSION_PATCH, ASN1_VERSION_NUMBER
 - Simplify ordering of SET OF elements.
 - Marked explicitly const uses of asn1_node with the introduction
   of the (compatible) asn1_node_const type.
